--- a/price/index.html
+++ b/price/index.html
@@ -30,11 +30,11 @@
 
       <select id="js-select" class="sort-select border-secondary d-none d-md-block rounded p-2 pe-4" disabled>
         <option value="all" disabled selected>排序篩選</option>
-        <option value="topPri">依上價排序</option>
-        <option value="midPri">依中價排序</option>
-        <option value="downPri">依下價排序</option>
-        <option value="avgPri">依平均價排序</option>
-        <option value="salesAmount">依交易量排序</option>
+        <option value="上價">依上價排序</option>
+        <option value="中價">依中價排序</option>
+        <option value="下價">依下價排序</option>
+        <option value="平均價">依平均價排序</option>
+        <option value="交易量">依交易量排序</option>
       </select>
     </div>
     <table class="market table me-4" id="up_and_down">
@@ -81,7 +81,7 @@
           <th width="14%">
             <div class="inline-flex sort-advanced">交易量
               <span>
-               <i data-price="交易量" data-sort="up" class="fas fa-caret-up"></i>
+                <i data-price="交易量" data-sort="up" class="fas fa-caret-up"></i>
                 
                 <i data-price="交易量" data-sort="down" class="fas fa-caret-down"></i>
               </span>
